# backtester

./: .gitignore  README.md  pyproject.toml
scripts/: yfinance_1min_data_example.py
src/: analyzer.py  definitions.py  main.py  utils.py
src/backtesting/: backtester.py
src/backtesting/strategies/: __init__.py  base_strategy.py  example_strategy.py
