[tool.poetry]
name = "python-dev-case-1"
version = "1.0.0"
description = "\"Template repo for the Python case as part of the Python Software Engineer interview process\""
authors = ["Gijs Paardekooper <gijs.paardekooper@crossoptions.nl>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
yfinance = "^0.2.50"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
